--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.65.147:3306/todo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/todo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 #    serverTimezone=Asia/Shanghai使用上海时区 之前是使用UTC时区，但是插入数据库会和电脑时间不一样，少8个小时 ---李
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
