--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,21 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.65.147:3306/todo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.0.100:1306/todo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 #    serverTimezone=Asia/Shanghai使用上海时区 之前是使用UTC时区，但是插入数据库会和电脑时间不一样，少8个小时 ---李
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.mchange.v2.c3p0.ComboPooledDataSource
-    password: 123456
-  thymeleaf:
-    cache: false
+    password: root
+  redis:
+    host: 192.168.0.100
+    port: 6379
+    password:
+    cache:
+      redis:
+        time-to-live: 3000
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+  mapper-locations: classpath:mapper/*.xml
+
+
